<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/trangchu" />
        <item
            android:id="@+id/nav_taikhoan"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/taikhoan" />
        <item
            android:id="@+id/nav_khaosat"
            android:icon="@drawable/ic_baseline_library_add_check_24"
            android:title="@string/khaosat" />
        <item
            android:id="@+id/nav_diendan"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/diendan" />
        <item
            android:id="@+id/nav_uommam"
            android:icon="@drawable/ic_baseline_local_florist_24"
            android:title="@string/uommam" />
    </group>
</menu>