<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tuvanapp.ui.home.HomeFragment"
        android:label="@string/trangchu"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_khaosat"
        android:name="com.example.tuvanapp.ui.KhaoSat.KhaoSatFragment"
        android:label="@string/khaosat"
        tools:layout="@layout/fragment_khaosat" />

    <fragment
        android:id="@+id/nav_taikhoan"
        android:name="com.example.tuvanapp.ui.TaiKhoan.TaiKhoanFragment"
        android:label="@string/taikhoan"
        tools:layout="@layout/fragment_taikhoan" />
    <fragment
        android:id="@+id/nav_diendan"
        android:name="com.example.tuvanapp.DiendanFragment"
        android:label="@string/diendan"
        tools:layout="@layout/fragment_diendan" />
    <fragment
        android:id="@+id/nav_uommam"
        android:name="com.example.tuvanapp.UommamFragment"
        android:label="@string/uommam"
        tools:layout="@layout/fragment_uommam" />
</navigation>